--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ text {
 </style>
 <svg width="960" height="600"></svg>
 
-<script src="d3_v4.js"></script>
+<script src="//d3js.org/d3.v4.min.js"></script>
 
 
 <body>
