--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ text {
 <div id="option">
       <input name="updateButton" 
            type="button" 
-           value="ReLoad" 
+           value="Reload" 
            onclick=location.reload();  />
     </div>
 
