--- a/D3_force_test/index.html
+++ b/D3_force_test/index.html
@@ -20,8 +20,8 @@ text {
 </style>
 <svg width="960" height="600"></svg>
 
-<script src="//d3js.org/d3.v4.min.js"></script>
-
+//<script src="//d3js.org/d3.v4.min.js"></script>
+	<script type="text/javascript" src="d3.js"></script>
 
 <body>
 
