--- a/DMV_bars/index.html
+++ b/DMV_bars/index.html
@@ -5,7 +5,7 @@
 		<title>D3: An SVG element tooltip</title>
 
 
-        <script src="https://d3js.org/d3.v6.min.js"></script>
+        <script src="d3.js"></script>
 
 
 		<style type="text/css">
