--- a/D3_MTA_Remote/index.html
+++ b/D3_MTA_Remote/index.html
@@ -12,7 +12,7 @@
 // set the dimensions and margins of the graph
 var margin = {top: 10, right: 30, bottom: 30, left: 60},
     width = 1800 - margin.left - margin.right,
-    height = 1800 - margin.top - margin.bottom;
+    height = 900 - margin.top - margin.bottom;
 
 // append the svg object to the body of the page
 var svg = d3.select("#my_dataviz")
@@ -24,14 +24,22 @@ var svg = d3.select("#my_dataviz")
           "translate(" + margin.left + "," + margin.top + ")");
 
 //Read the data
-d3.csv("https://new.mta.info/document/20441",
+d3.csv("MTA_SubwayAndBusThruEndOf2020.csv",
 
   // When reading the csv, I must format variables:
   function(d){
-    return { Date : d3.timeParse("%Y-%m-%d")(d.Date), Subway : d['Subways: Total Estimated Ridership'] }
+    return {Date : d3.timeParse("%Y-%m-%d")(d.Date), Subway_2020: d.Subway_2020 , Bus_2020: d.Bus_2020 }
   },
 
 
+//    return { date : d3.timeParse("%Y-%m-%d")(d.date), value : d.value }
+
+
+//return { date : d3.timeParse("%Y-%m-%d")(d.date), value : d.value }
+
+
+//2013-04-28
+//d3.timeParse("%Y-%m-%d")
 
   // Now I can use this dataset:
   function(data) {
@@ -46,7 +54,7 @@ d3.csv("https://new.mta.info/document/20441",
 
     // Add Y axis
     var y = d3.scaleLinear()
-      .domain([0, d3.max(data, function(d) { return +d.Subway; })])
+      .domain([0, d3.max(data, function(d) { return +d.Subway_2020; })])
       .range([ height, 0 ]);
     svg.append("g")
       .call(d3.axisLeft(y));
@@ -59,8 +67,31 @@ d3.csv("https://new.mta.info/document/20441",
       .attr("stroke-width", 1.5)
       .attr("d", d3.line()
         .x(function(d) { return x(d.Date) })
-        .y(function(d) { return y(d.Subway) })
+        .y(function(d) { return y(d.Subway_2020) })
         )
+
+    // Add Y axis
+    //var y = d3.scaleLinear()
+    //  .domain([0, d3.max(data, function(d) { return +d.Bus_2020; })])
+     // .range([ height, 0 ]);
+    //svg.append("g")
+     // .call(d3.axisLeft(y));
+
+    // Add the line
+    svg.append("path")
+      .datum(data)
+      .attr("fill", "none")
+      .attr("stroke", "red")
+      .attr("stroke-width", 1.5)
+      .attr("d", d3.line()
+        .x(function(d) { return x(d.Date) })
+        .y(function(d) { return y(d.Bus_2020) })
+        )
+
+
+
+
+
 
 })
 
