--- a/D3_MTA_Remote/index.html
+++ b/D3_MTA_Remote/index.html
@@ -5,7 +5,8 @@
 <script src="https://d3js.org/d3.v4.js"></script>
 
 <!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
+<div id="my_dataviz"; height: 200px;
+  width: 600px;
 
 <script>
 
