--- a/D3_MTA_Remote/index.html
+++ b/D3_MTA_Remote/index.html
@@ -6,8 +6,10 @@
 
 <!-- Create a div where the graph will take place -->
 <div id="my_dataviz"; height: 200px;
-  width: 600px;
+  width: 600px></div>
 
+     
+//<div id="my_dataviz"></div>
 <script>
 
 // set the dimensions and margins of the graph
