--- a/D3_MTA_Remote/index.html
+++ b/D3_MTA_Remote/index.html
@@ -88,12 +88,33 @@ d3.csv("MTA_SubwayAndBusThruEndOf2020.csv",
         .y(function(d) { return y(d.Bus_2020) })
         )
 
+var legend = svg.append("g")
+      .attr("class", "legend")
+      .attr("font-family", "sans-serif")
+      .attr("font-size", 20)
+      .attr("text-anchor", "start")
+      .selectAll("g")
+      .data(pie_data)
+      .enter().append("g")
+      .attr("transform", function(d, i) {
+        return "translate(0," + i * 30 + ")";
+      });
 
-legend = svg.append("g")
-  .attr("class","legend")
-  .attr("transform","translate(50,30)")
-  .style("font-size","12px")
-  .call(d3.legend)
+    legend.append("text")
+      .attr("x", radius + 30)
+      .attr("y", 9.5)
+      .attr("dy", "0.32em")
+      .text(function(d) {
+        return d.data.key;
+      });
+
+    legend.append("rect")
+      .attr("x", radius + 10)
+      .attr("width", 19)
+      .attr("height", 19)
+      .attr("fill", function(d) {
+        return color(d.data.key);
+      });
 
 
 
