--- a/D3_force_test/index.html
+++ b/D3_force_test/index.html
@@ -18,28 +18,9 @@ text {
 }
 
 </style>
-<svg width="960" height="600"></svg>
+<svg width="1200" height="900"></svg>
 
-//<script src="//d3js.org/d3.v4.min.js"></script>
-	<script type="text/javascript" src="d3.js"></script>
-
-<body>
-
-
-  <h3>TD Data Products and Projects </h3>
-
-<div id="option">
-      <input name="updateButton" 
-           type="button" 
-           value="Reload" 
-           onclick=location.reload();  />
-    </div>
-
-<h4></h4>
-
-
-
-
+<script src="d3_v4.js"></script>
 
 
 <script>
@@ -48,16 +29,18 @@ var svg = d3.select("svg"),
     width = +svg.attr("width"),
     height = +svg.attr("height");
 1
-var color = d3.scaleOrdinal(d3.schemeCategory20);
+var color = d3.scaleOrdinal(["#1f77b4", "#ff7f0e", "#2ca02c","#9467bd", "#8c564b", "#e377c2", "#7f7f7f", "#d62728"]);
+
+
 
 var simulation = d3.forceSimulation()
-    .force("link", d3.forceLink().id(function(d) { return d.id; }).distance(180))
+    .force("link", d3.forceLink().id(function(d) { return d.id; }).distance(150))
  
    
     .force("charge", d3.forceManyBody().strength(-300))
     .force("center", d3.forceCenter(width / 2, height / 2));
 
-d3.json("TD_Matrix1.json", function(error, graph) {
+d3.json("SocialIssues_Matrix77.json", function(error, graph) {
   if (error) throw error;
 
   var link = svg.append("g")
@@ -131,7 +114,3 @@ function dragended(d) {
 }
 //<script src="https://d3js.org/d3.v4.min.js"></script>
 </script>
-
-</body>
-</html>
-
