--- a/D3_force_test/index.html
+++ b/D3_force_test/index.html
@@ -20,7 +20,7 @@ text {
 </style>
 <svg width="1200" height="900"></svg>
 
-<script src='https://d3js.org/d3.v4.min.js'></script>.
+<script src="//d3js.org/d3.v4.min.js"></script>
 
 
 <script>
