--- a/D3_force_test/index.html
+++ b/D3_force_test/index.html
@@ -40,7 +40,7 @@ var simulation = d3.forceSimulation()
     .force("charge", d3.forceManyBody().strength(-300))
     .force("center", d3.forceCenter(width / 2, height / 2));
 
-d3.json("SocialIssues_Matrix77.json", function(error, graph) {
+d3.json("Matrix77.json", function(error, graph) {
   if (error) throw error;
 
   var link = svg.append("g")
