--- a/D3_force_test/index.html
+++ b/D3_force_test/index.html
@@ -18,9 +18,9 @@ text {
 }
 
 </style>
-<svg width="1200" height="900"></svg>
+<svg width="1000" height="800"></svg>
 
-<script src="d3_v4.js"></script>
+<script src="//d3js.org/d3.v4.min.js"></script>
 
 
 <script>
