--- a/TranspoResiliency/index.html
+++ b/TranspoResiliency/index.html
@@ -20,8 +20,8 @@ text {
 </style>
 <svg width="1200" height="1200"></svg>
 
-<script src=”https://d3js.org/d3.v4.min.js”></script>
 
+<script src="https://d3js.org/d3.v4.min.js"></script>
 
 <script>
 
