--- a/TranspoResiliency/index.html
+++ b/TranspoResiliency/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+
+
+<div style="width:600px;height:600px; background-color:white;">
+
+
+
 <style>
 
 .links line {
@@ -112,5 +118,8 @@ function dragended(d) {
   d.fx = null;
   d.fy = null;
 }
+  
+ </div> 
+  
 //<script src="https://d3js.org/d3.v4.min.js"></script>
 </script>
