--- a/TranspoResiliency/index.html
+++ b/TranspoResiliency/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<h1{ margin: 0; }</h1>
 
 
 <style>
@@ -29,6 +28,8 @@ text {
 
 <script>
 
+var margin = {top: 30, right: 20, bottom: 30, left: 50},
+  
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
     height = +svg.attr("height");
