--- a/TranspoResiliency/index.html
+++ b/TranspoResiliency/index.html
@@ -28,7 +28,7 @@ text {
 
 <script>
 
-var margin = {top: 30, right: 20, bottom: 30, left: 50},
+var margin = {top: 30, right: 20, bottom: 30, left: 50};
   
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
