--- a/TranspoResiliency/index.html
+++ b/TranspoResiliency/index.html
@@ -30,6 +30,8 @@ text {
 
 var margin = {top: 0, right: 0, bottom: 100, left: 0};
   
+var center_force = d3.forceCenter(width / 2, height / 2);   
+  
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
     height = +svg.attr("height");
