--- a/TranspoResiliency/index.html
+++ b/TranspoResiliency/index.html
@@ -21,7 +21,7 @@ text {
 }
 
 </style>
-<svg width="850" height="850"></svg>
+<svg width="850" height="830"></svg>
 
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -30,7 +30,7 @@ text {
 
 var margin = {top: 0, right: 0, bottom: 0, left: 0};
   
-var center_force = d3.forceCenter(width / 2, height / 5);   
+//var center_force = d3.forceCenter(width / 2, height / 5);   
   
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
