--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style>
 
 .links line {
-  stroke: #D3D3D3;
+  stroke: #999;
   stroke-opacity: 0.6;
 }
 
@@ -19,54 +19,48 @@ text {
 
 </style>
 <svg width="960" height="600"></svg>
-
-<script src="//d3js.org/d3.v4.min.js"></script>
-
-
-<body>
-
-
-  <h3>TD Data Products and Projects </h3>
-
-<div id="option">
-      <input name="updateButton" 
-           type="button" 
-           value="Reload" 
-           onclick=location.reload();  />
-    </div>
-
-<h4></h4>
-
-
-
-
-
-
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
     height = +svg.attr("height");
-1
+
 var color = d3.scaleOrdinal(d3.schemeCategory20);
 
 var simulation = d3.forceSimulation()
-    .force("link", d3.forceLink().id(function(d) { return d.id; }).distance(180))
- 
    
-    .force("charge", d3.forceManyBody().strength(-300))
-    .force("center", d3.forceCenter(width / 2, height / 2));
+  //  .force("link", d3.forceLink().id(function(d) { return d.id; }))
 
-d3.json("TD_Matrix1.json", function(error, graph) {
+   .force("link", d3.forceLink().id(function(d) { return d.id; }).distance(75))    
+   .force("charge", d3.forceManyBody().strength(-38))
+    .force("center", d3.forceCenter(width / 2 , height / 2.3));
+
+//my orig
+ //   .force("link", d3.forceLink().id(function(d) { return d.id; }).distance(150))
+  //  .force("charge", d3.forceManyBody().strength(-300))
+  //  .force("center", d3.forceCenter(width / 2, height / 2));
+
+
+//mcbethorig
+
+//    .force("link", d3.forceLink().id(function(d) { return d.id; }))
+ //   .force("charge", d3.forceManyBody())
+  //  .force("center", d3.forceCenter(width / 2, height / 2));
+
+
+
+
+
+d3.json("Matrix77.json", function(error, graph) {
   if (error) throw error;
 
   var link = svg.append("g")
       .attr("class", "links")
-
     .selectAll("line")
     .data(graph.links)
     .enter().append("line")
-      .attr("stroke-width", function(d) { return Math.sqrt(d.value); });
+      .attr("linkDistance", 55);
 
   var node = svg.append("g")
       .attr("class", "nodes")
@@ -88,6 +82,30 @@ d3.json("TD_Matrix1.json", function(error, graph) {
       })
       .attr('x', 6)
       .attr('y', 3);
+
+
+
+  //var simulation = d3.forceSimulation()
+  //  .force("link", d3.forceLink().distance(function(d) {return d.distance;}).strength(0.1))
+
+
+//var forceLink = d3
+//    .forceLink().id(function (d) {
+ //       return d.value;
+ //   })
+ //   .distance(function (d) {
+ //       return GetNodeDefaults(d.label).linkDistance;
+ //   })
+ //   .strength(0.1);
+
+
+////////
+
+
+
+
+
+
 
   node.append("title")
       .text(function(d) { return d.id; });
@@ -129,23 +147,5 @@ function dragended(d) {
   d.fx = null;
   d.fy = null;
 }
-//<script src="https://d3js.org/d3.v4.min.js"></script>
+
 </script>
-
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
