--- a/BarChart/index.html
+++ b/BarChart/index.html
@@ -17,7 +17,7 @@
 
 		
 
-<h3>Vehicles Per HH by US, Major US Cities, and NYC Boro </h3>
+<h3>Vehicles Hello Heloow Per HH by US, Major US Cities, and NYC Boro </h3>
 
 	<div id="option">
     	<input name="updateButton" 
