--- a/BarChart/index.html
+++ b/BarChart/index.html
@@ -17,7 +17,7 @@
 
 		
 
-<h3>Vehicles Hello Heloow Per HH by US, Major US Cities, and NYC Boro </h3>
+<h3>Vehicles Per HH by US, Major US Cities, and NYC Boro (no mouseover)</h3>
 
 	<div id="option">
     	<input name="updateButton" 
@@ -148,30 +148,30 @@
 			
 			  // add interactive code for mouseover any bar
 
-			   .on("mouseover", function(d) {
+			 //  .on("mouseover", function(d) {
 
-					//Get this bar's x/y values, then augment for the tooltip
-					var xPosition = parseFloat(d3.select(this).attr("x")) + xScale.bandwidth() / 2;
-					var yPosition = parseFloat(d3.select(this).attr("y")) + 14;
+			//		//Get this bar's x/y values, then augment for the tooltip
+			//		var xPosition = parseFloat(d3.select(this).attr("x")) + xScale.bandwidth() / 2;
+			//		var yPosition = parseFloat(d3.select(this).attr("y")) + 14;
 
 					//Create the tooltip label
-					svg.append("text")
-					   .attr("id", "tooltip")
-					   .attr("x", xPosition)
-					   .attr("y", yPosition)
-					   .attr("text-anchor", "middle")
-					   .attr("font-family", "sans-serif")
-					   .attr("font-size", "11px")
-					   .attr("font-weight", "bold")
-					   .attr("fill", "black")
-					   .text(Math.round(100*d,1)/100);
+					//svg.append("text")
+					//   .attr("id", "tooltip")
+					//   .attr("x", xPosition)
+					//   .attr("y", yPosition)
+					 //  .attr("text-anchor", "middle")
+					 //  .attr("font-family", "sans-serif")
+					 //  .attr("font-size", "11px")
+					 //  .attr("font-weight", "bold")
+					 //  .attr("fill", "black")
+					 //  .text(Math.round(100*d,1)/100);
 
-			   })
-			   .on("mouseout", function() {
+			//   })
+			//   .on("mouseout", function() {
 			   
 					//Remove the tooltip
-					d3.select("#tooltip").remove();
-				 })	
+			//		d3.select("#tooltip").remove();
+			//	 })	
 
 
 // add response to user clicking on any bar - will show data about bar under the chart
