made usa bar black

--- a/BarChart/index.html
+++ b/BarChart/index.html
@@ -117,7 +117,7 @@
 // "#E0E0E0" ----light grey
 // #708090 --- slate gray
 
-    				if (dataset3[inx] ==1) {color = "#708090"   //grey
+    				if (dataset3[inx] ==1) {color = "#black"   //grey
     				}
     				
     				else if (dataset3[inx] ==2) {color = "#FF5959" // dark orange
