--- a/BarChart/index.html
+++ b/BarChart/index.html
@@ -5,7 +5,7 @@
 		<title>D3: An SVG element tooltip</title>
 
 
-        <script src="//d3js.org/d3.v4.min.js"></script>
+         <script src="https://d3js.org/d3.v5.min.js"></script>
 
 
 		<style type="text/css">
