--- a/TranspoResiliency/index.html
+++ b/TranspoResiliency/index.html
@@ -96,10 +96,10 @@
         var simulation = d3.forceSimulation().nodes(nodes);
 
         // set up the forces
-        var link = d3.forceLink(links).id(function (d) { return d.id; }).distance(120).strength(1);
+        var link = d3.forceLink(links).id(function (d) { return d.id; }).distance(100).strength(2);
         var charge = d3.forceManyBody().strength(-1000);
         var forceX = d3.forceX().x(width / 3).strength(.05);
-        var forceY = d3.forceY().y(height /2.2).strength(.05);
+        var forceY = d3.forceY().y(height / 2.2).strength(.05);
 
         // apply the forces
         simulation
@@ -206,7 +206,7 @@
             .attr("style", "stroke:black") */
             .text(function (d) { return d.id });
 
-        // attach the zoom handler
+       /* // attach the zoom handler
         var zoom_handler = d3.zoom()
             .on("zoom", zoom_actions);
 
@@ -214,8 +214,8 @@
 
         //Zoom functions
         function zoom_actions() {
-            g.attr("transform", d3.event.transform)
-        }
+            g.attr("transform", d3.event.transform). 
+        } */
 
         function dragStart(d) {
             if (!d3.event.active) simulation.alphaTarget(0.3).restart()
