--- a/TranspoResiliency/index.html
+++ b/TranspoResiliency/index.html
@@ -31,7 +31,7 @@
 
 
 {"id": "E-Bike Legalization", "group": 9},
-{"id": "Citi Bike/ Revel", "group": 9},
+{"id": "Citi Bike", "group": 9},
 {"id": "New Bike Infrastrucure", "group": 9},
 
 
@@ -58,8 +58,6 @@
 
 
 {"source": "Strategic Focus Areas", "target":  "Outdoor Distancing", "value": 5},
-
-
 {"source": "Open Restaurants​", "target":  "Outdoor Distancing", "value": 5},
 {"source": "Temp Bike Lanes", "target":  "Outdoor Distancing", "value": 5},
 {"source": "Open Streets​", "target":  "Outdoor Distancing", "value": 5},
@@ -68,7 +66,7 @@
 
 {"source": "E-Bike Legalization", "target":  "Micromobility", "value": 5},
 {"source": "New Bike Infrastrucure", "target":  "Micromobility", "value": 5},
-{"source": "Citi Bike/ Revel", "target":  "Micromobility", "value": 5},
+{"source": "Citi Bike", "target":  "Micromobility", "value": 5},
 
 
 {"source": "Strategic Focus Areas", "target":  "Traffic Mitigation", "value": 5},
