--- a/BarChart/index.html
+++ b/BarChart/index.html
@@ -1,4 +1,3 @@
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -21,15 +20,18 @@
 
 		
 
-<h5>DMV Vehicle Ownership by US City and NYC Boro </h3>
+<h3>Vehicle Ownership by US City and NYC Boro </h3>
+
+
 
 	<div id="option">
     	<input name="updateButton" 
            type="button" 
-           value="Load /re-Load Data Sorted by Group" 
+           value="Load /Re-Load Data Sorted by Geo Group" 
            onclick="LoadAgain()" />
 		</div>
 
+<h5>(Click / Double-click to see data and sort bars) </h5>
 		
 	<h4></h4>	
 
@@ -226,3 +228,4 @@
 		</script>
 	</body>
 </html>
+
