--- a/BarChart/index.html
+++ b/BarChart/index.html
@@ -31,7 +31,10 @@
            onclick="LoadAgain()" />
 		</div>
 
-<h5>(Click / Double-click to see data and sort bars) </h5>
+ <h5 style="color:grey;font-size:14px;">
+      (Click / Double-click to see data and sort bars)
+    </h5>
+
 		
 	<h4></h4>	
 
