--- a/DCA_Current/index.html
+++ b/DCA_Current/index.html
@@ -9,8 +9,7 @@
             margin-left: 100px;
             margin-top: 0px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-     
-            background-color: #e6e4d9;
+
        
         }
 
@@ -30,7 +29,7 @@
 
 <body>
 
-<h2>Off-Street Parking Facilities Licensed by NYCDCWP (Feb 2021) </h2>
+<h2>Off-Street Public Parking Facilities Licensed by NYCDCWP</h2>
 
 
 
@@ -38,6 +37,6 @@
 <iframe width=800 height=630 frameborder="0" src="DCA_Folium.html
 " allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
-<h6>Source: NYC Department of Consumer and Worker Protection (DCWP); NYC OpenData</h6>
+<h6>Source: NYC Department of Consumer and Worker Protection (NYCDCWP); NYC OpenData (Feb 2021) </h6>
 
 </body>
