--- a/DCA_Current/index.html
+++ b/DCA_Current/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-
 <!-- Load d3.js -->
 
 
@@ -15,28 +12,35 @@
 
 
         h6 {
-        	color:slategrey;
+            color:slategrey;
             margin-top: 5px;
+            text-indent: 5px;
 
         }
   
-        h2{text-indent: 2px;}
-
-
+        h2{
+         
+         font-size: xx-large; 
+         text-indent: 5px;
+         margin-bottom: 10px;
+         margin-top: 10px;
+         }
+s
+s
 </style>
 
 
 
 <body>
 
-<h2>Off-Street Public Parking Facilities Licensed by NYCDCWP</h2>
+<h2>Off-Street Public Parking Facilities (February, 2021) </h2>
 
 
 
 
-<iframe width=800 height=630 frameborder="0" src="DCA_Folium.html
+<iframe width=840 height=630 frameborder="0" src="DCA_Folium.html
 " allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
-<h6>Source: NYC Department of Consumer and Worker Protection (NYCDCWP); NYC OpenData (Feb 2021) </h6>
+<h6>Source: NYC Department of Consumer and Worker Protection (NYCDCWP); NYC OpenData </h6>
 
 </body>
