--- a/DCA_Current/index.html
+++ b/DCA_Current/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<meta charset="utf-8">
+
 <!-- Load d3.js -->
 
 
@@ -12,14 +15,14 @@
 
 
         h6 {
-            color:slategrey;
+            color:#787878;
             margin-top: 5px;
             text-indent: 5px;
 
         }
   
         h2{
-         
+         color:#2a2a2a;
          font-size: xx-large; 
          text-indent: 5px;
          margin-bottom: 10px;
