--- a/DCA_Current/index.html
+++ b/DCA_Current/index.html
@@ -28,15 +28,14 @@
          margin-bottom: 10px;
          margin-top: 10px;
          }
-s
-s
+
 </style>
 
 
 
 <body>
-
-<h2>NYC Off-Street Licensed Public Parking Facilities </h2>
+ 
+<h2>NYC Licensed Off-Street Public Parking Facilities </h2>
 
 
 
