--- a/DCA_Current/index.html
+++ b/DCA_Current/index.html
@@ -14,27 +14,33 @@
         }
 
 
-        h6 {
-            color:#787878;
-            margin-top: 5px;
-            text-indent: 5px;
-
-        }
   
         h2{
          color:#2a2a2a;
          font-size: xx-large; 
+         font-weight: lighter;
          text-indent: 5px;
+         margin-top: 18px;
          margin-bottom: 10px;
-         margin-top: 10px;
          }
+
+
+
+        h6 {
+            color:#787878;
+            margin-top: 5px;
+            text-indent: 5px;
+            font-weight: lighter;
+
+        }
+
 
 </style>
 
 
 
 <body>
- 
+
 <h2>NYC Licensed Off-Street Public Parking Facilities </h2>
 
 
