--- a/DCA_Current/index.html
+++ b/DCA_Current/index.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-
-<!-- Load d3.js -->
-
-
- <style>
+<style>
         body {
             margin-left: 100px;
             margin-top: 0px;
@@ -12,17 +6,6 @@
 
        
         }
-
-
-  
-        h2{
-         color:#2a2a2a;
-         font-size: xx-large; 
-         font-weight: lighter;
-         text-indent: 5px;
-         margin-top: 10px;
-         margin-bottom: 10px;
-         }
 
 
 
@@ -34,6 +17,10 @@
 
         }
 
+        iframe{margin-top: 30px;}
+
+
+
 
 </style>
 
@@ -41,14 +28,12 @@
 
 <body>
 
-<h2>NYC Licensed Off-Street Public Parking Facilities </h2>
 
 
 
-
-<iframe width=840 height=630 frameborder="0" src="DCA_Folium2.html
+<iframe width=800 height=630 frameborder="0" src="https://nycplanning.carto.com/u/dcptransportation/builder/3b11ce92-c0d3-4a07-b0b3-e18ba667b44c/embed
 " allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
-<h6>Source: NYC Department of Consumer and Worker Protection (NYCDCWP); NYC OpenData, February, 2021 </h6>
+<h6>Sources: NYC Department of Transportation, NYC Department of Consumer and Worker Protection, NYC OpenData (February, 2021) </h6>
 
 </body>
