--- a/DCA_Current_v2/index.html
+++ b/DCA_Current_v2/index.html
@@ -9,11 +9,8 @@
         body {
             margin-left: 100px;
             margin-top: 0px;
-            font-family: 'Verdana', sans-serif;
-
-       
+            font-family: 'Verdana', sans-serif;   
         }
-
 
   
         h3{
@@ -24,7 +21,6 @@
          padding-top: 20px;
          margin-bottom: 13px;
          }
-
 
 
         h6 {
@@ -42,12 +38,9 @@
             padding-top: 0px;
 
         }
-s
-
 
 
 </style>
-
 
 
 <body>
@@ -55,10 +48,7 @@ s
 <h3>New York City Public Parking Facilities </h3>
 
 
-
-
-<iframe width=720 height=600 frameborder="0" src="MapOutputPoints.html
-" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+<iframe width=720 height=600 frameborder="0" src="MapOutputPoints.html" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 <h6>Sources: NYC Department of Transportation; NYC Department of Consumer and Worker Protection, NYC OpenData (February, 2021) </h6>
 
 </body>
