--- a/BarChart/index.html
+++ b/BarChart/index.html
@@ -33,7 +33,7 @@ s
 
 		
 
-<h3>Vehicle Ownership by US City and NYC Borough </h3>
+<h3>Vehicle Ownership Rates for NYC Boroughs and Select US Cities</h3>
 
 
 
