--- a/DCA_Current_v2/index.html
+++ b/DCA_Current_v2/index.html
@@ -26,7 +26,7 @@
         h6 {
             color:grey;
     
-            text-indent: 5px;
+            text-indent: 4px;
             font-weight: lighter;
             margin-top: 5px;
             margin-bottom: 0px;
@@ -49,6 +49,6 @@
 
 
 <iframe width=720 height=600 frameborder="0" src="MapOutputPoints.html" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-<h6>Sources: NYC Department of Transportation; NYC Department of Consumer and Worker Protection, NYC OpenData (February, 2021) </h6>
+<h6>Sources: NYC Department of Transportation, NYC Department of Consumer and Worker Protection, NYC OpenData (February 2021)</h6>
 
 </body>
