--- a/BarChart/index.html
+++ b/BarChart/index.html
@@ -1,6 +1,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 		<title>D3: Bar Chart</title>
 
          <link rel="stylesheet" type="text/css" href="https://codepen.io/chriddyp/pen/bWLwgP.css">
@@ -50,7 +53,7 @@ s
 
 
  <h5 style="color:grey;font-size:14px;">
-      Hover over individual bars to see Geography name, and Vehicles per Household according the US Census ACS; Double-click any bar to sort.
+      Hover over individual bars to see Geography name, and Vehicles per Household (Source: US Census, ACS YYYY); Double-click any bar to sort.
     </h5>
 
 		
