--- a/Ptng/index.html
+++ b/Ptng/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+
+
 <html>
   <head>
-    <title>Incremental Slides with xaringan / remark.js</title>
+    <title>Paintings by KBJ /</title>
     <meta charset="utf-8">
     <link href="libs/remark-css/metropolis.css" rel="stylesheet" />
     <link href="libs/remark-css/metropolis-fonts.css" rel="stylesheet" />
@@ -13,109 +15,114 @@
 
 class: center, middle, inverse, title-slide
 
-# Karen's First Slideshow / remark.js
-### 2021_06_07
-## https://lawrencecheng123.github.io/Seattle.jpg
+#Paintings by KBJ
+### October 2021
 
 
 ---
 
 class: clear, no-number, center
 
-## Internal Change: Building a Learning Community
 
 
 &lt;hr&gt;
 
 
 .wide-right[
-&lt;img src="/Users/karen/Documents/BettyDocs/UNADJUSTEDNONRAW_thumb_e49.jpg" style="max-width:80%;"/&gt;
+&lt;img src="images/Coney2.jpg "style="max-width:80%;"/&gt;
 ]
 
-.font60[Don't saw your slides too hard.]
-
-
-
-
+.font90[Coney2]
 
 
 ---
-
 
 class: clear, no-number, center
 
-## Internal Change: Building a Learning Community
 
 
 &lt;hr&gt;
 
 
 .wide-right[
-&lt;img src="https://lawrencecheng123.github.io/Seattle.jpg" style="max-width:80%;"/&gt;
+&lt;img src="images/Coney1.jpg "style="max-width:80%;"/&gt;
 ]
 
-.font60[Don't saw your slides too hard.]
-
-
+.font90[Coney1]
 
 
 ---
 
+class: clear, no-number, center
+
+
+
+&lt;hr&gt;
+
+
+.wide-right[
+&lt;img src="images/Tilden2.jpg "style="max-width:80%;"/&gt;
+]
+
+.font90[Tilden2]
+
+
+---
+
+class: clear, no-number, center
+
+
+
+&lt;hr&gt;
+
+
+.wide-right[
+&lt;img src="images/Tilden3.jpg "style="max-width:80%;"/&gt;
+]
+
+.font90[Tilden3]
+
+
+---
+
+class: clear, no-number, center
+
+
+
+&lt;hr&gt;
+
+
+.wide-right[
+&lt;img src="images/Tilden1.jpg "style="max-width:80%;"/&gt;
+]
+
+.font90[Tilden1]
+
+
+---
+
+class: clear, no-number, center
+
+
+
+&lt;hr&gt;
+
+
+.wide-right[
+&lt;img src="images/ProspPk1.jpg "style="max-width:80%;"/&gt;
+]
+
+.font90[ProspPk1]
+
+
+---
 
 class: clear, no-number
 
-## Regime Shifts in Natural Ecosystems
-
-
-
-.pull-left[ &lt;img src="/Users/karen/Documents/BettyDocs/UNADJUSTEDNONRAW_thumb_e49.jpg" style="max-width:48%; padding: 0px 0px 0px 0px;float: left"/&gt;
-]
-
-
-.wide-right[&lt;img src="/Users/karen/Documents/BettyDocs/BettyPictures/BettyandDickWedding.jpg" style="max-width:48%; padding: 0px 0px 0px 20px;  float: right"/&gt;
-
-]
-
-.pull-right[&lt;img src="/Users/karen/Documents/BettyDocs/BettyPictures/BettyFlorida.jpg"  style="max-width:48%; padding: 0px 0px 0px 0px; float: right;"/&gt;
-
-]
-
-
-.pull-left[&lt;img src="/Users/karen/Documents/BettyDocs/BettyPictures/BettyAndDickFlorida.jpg"  style="max-width:48%; padding: 0px 0px 0px 0px; float: left;"/&gt;
-]
-
-
-
-
-
-
----
-
-class: clear, no-number, center
-
-## Internal Change: Building a Learning Community
-
-
 &lt;hr&gt;
 
-&lt;img src="images/Rcourse2014.jpg" alt="Picture of BC Public Service first in-house R training workshop" style="max-width:50%;"/&gt;
 
----
-
-
-class: clear, no-number
-
-## Last Slide
-
-&lt;hr&gt;
-
-.wide-right[
-&lt;img src="images/Rcourse2014.jpg" style="max-width:75%;"/&gt;
-]
-
-.font60[Don't saw your slides too hard.]
-
-
+ .pull-left[ &lt;img src="images/Coney2.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Coney1.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Tilden2.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Tilden3.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Tilden1.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/ProspPk1.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ]
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
@@ -124,23 +131,5 @@ class: clear, no-number
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {window.dispatchEvent(new Event('resize'));});
 (function() {var d = document, s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler"); if (!r) return; s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }"; d.head.appendChild(s);})();</script>
 
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-  tex2jax: {
-    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
-  }
-});
-</script>
-<!-- dynamically load mathjax for compatibility with self-contained -->
-<script>
-(function () {
-  var script = document.createElement('script');
-  script.type = 'text/javascript';
-  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
-  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
-    script.src  = script.src.replace(/^https?:/, '');
-  document.getElementsByTagName('head')[0].appendChild(script);
-})();
-</script>
   </body>
 </html>
