--- a/Ptng/index.html
+++ b/Ptng/index.html
@@ -29,10 +29,10 @@ class: clear, no-number, center
 
 
 .wide-right[
-&lt;img src="images/Coney2.jpg "style="max-width:80%;"/&gt;
+&lt;img src="images/Tilden7.jpg "style="max-width:80%;"/&gt;
 ]
 
-.font90[Coney2]
+.font90[Tilden7]
 
 
 ---
@@ -77,22 +77,6 @@ class: clear, no-number, center
 
 
 .wide-right[
-&lt;img src="images/Tilden3.jpg "style="max-width:80%;"/&gt;
-]
-
-.font90[Tilden3]
-
-
----
-
-class: clear, no-number, center
-
-
-
-&lt;hr&gt;
-
-
-.wide-right[
 &lt;img src="images/Tilden1.jpg "style="max-width:80%;"/&gt;
 ]
 
@@ -122,7 +106,7 @@ class: clear, no-number
 &lt;hr&gt;
 
 
- .pull-left[ &lt;img src="images/Coney2.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Coney1.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Tilden2.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Tilden3.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Tilden1.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/ProspPk1.jpg" style="max-width:25%; padding: 30px 0px 0px 20px;float: right"/&gt; ]
+ .pull-left[ &lt;img src="images/Tilden7.jpg" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Coney1.jpg" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Tilden2.jpg" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/Tilden1.jpg" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/ProspPk1.jpg" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ]
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
