--- a/DCA_2022_02/index.html
+++ b/DCA_2022_02/index.html
@@ -40,6 +40,6 @@
 
 
 <iframe width=720 height=600 frameborder="0" src="DCAandMuni_GradPoints_CSSLegGit.html" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-<h6>Sources: NYC Department of Transportation, NYC Department of Consumer and Worker Protection, NYC OpenData (February 2022)</h6>
+<h6>Data Mapped by NYC Department of City Planning, Transportation Division (source: NYC OpenData, February 2022)</h6>
 
 </body>
