--- a/BarChart/index.html
+++ b/BarChart/index.html
@@ -53,7 +53,7 @@ s
 
 
  <h5 style="color:grey;font-size:14px;">
-      Hover over individual bars to see Geography name, and Vehicles per Household (Source: US Census, ACS YYYY); Double-click any bar to sort.
+      Hover over individual bars to see Geography name, and Vehicles per Household (Source: US Census, ACS 2016/17); Double-click any bar to sort.
     </h5>
 
 		
