--- a/NewDMVBar/index.html
+++ b/NewDMVBar/index.html
@@ -45,7 +45,7 @@
 
 <body>
 
-<h3>Cars Per HH  - New York City vs USA and Other American Cities (Source: ASC 2016/2017)</h3>
+<h3>Cars Per HH  - New York City vs USA and Select Other American Cities (Source: ASC 2016/2017)</h3>
 
 
 <iframe width=1400 height=600 frameborder="0" src="https://kjohnso.github.io/DMV_Bar2/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
