--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -48,3 +48,18 @@
 
 
 </style>
+
+
+ <body>
+
+     <h3>DCA Capacity by Facility Type (2012 and 2022)</h3>
+     <h6 style="color:skyblue">Parking Lot</h6>
+     <h6 style="color:steelblue">Garage</h6>
+     <h6 style="color:darkorange">Combo </h6>
+
+
+
+     <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart5/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+
+
+ </body>
