--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -14,10 +14,10 @@
 
   
         h3{
-         color:darkslategrey;
+         color:black;
          font-size: x-large; 
         
-         
+         font-weight: lighter;
          text-indent: 2px;
          padding-top: 20px;
          margin-bottom: 13px;
