--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -53,7 +53,7 @@
 
  <body>
 
-     <h3>DCA Capacity by Facility Type (2012 and 2022)</h3>
+     <h3>DCA-Licensed Public Parking Capacity, by Facility Type, 2012 vs. 2022</h3>
      
   
   
