--- a/BarChart5/index.html
+++ b/BarChart5/index.html
@@ -74,7 +74,8 @@ function chart(csv) {
 			return d
 		})
 
-		y.domain([0, d3.max(data, d => d3.sum(keys, k => +d[k]))]).nice();
+	//	y.domain([0, d3.max(data, d => d3.sum(keys, k => +d[k]))]).nice();
+		y.domain([0, 300000];
 
 		svg.selectAll(".y-axis").transition().duration(speed)
 			.call(d3.axisLeft(y).ticks(null, "s"))
