--- a/BarChart5/index.html
+++ b/BarChart5/index.html
@@ -75,7 +75,7 @@ function chart(csv) {
 		})
 
 	//	y.domain([0, d3.max(data, d => d3.sum(keys, k => +d[k]))]).nice();
-		y.domain([0, 300000];
+		y.domain([0, 300000]);
 
 		svg.selectAll(".y-axis").transition().duration(speed)
 			.call(d3.axisLeft(y).ticks(null, "s"))
