--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -64,6 +64,7 @@
      <h6 style="color:steelblue">Garage</h6>
 
      <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart5/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+     <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart6/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
 
  </body>
