--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -23,6 +23,20 @@
          margin-bottom: 13px;
          }
 
+  
+        h4{
+         color:black;
+         font-size: x-large; 
+        
+         font-weight: lighter;
+         text-indent: 50px;
+         padding-top: 20px;
+         margin-bottom: 13px;
+         }
+  
+  
+  
+  
 
         h6 {
           
@@ -64,7 +78,7 @@
      <h6 style="color:steelblue">Garage</h6>
 
      <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart5/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-     <h3>CD 1-6 Details</h3>
+     <h4>CD 1-6 Details</h4>
      <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart6/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
 
