--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -26,7 +26,7 @@
   
         h4{
          color:black;
-         font-size: x-large; 
+         font-size: large; 
         
          font-weight: lighter;
          text-indent: 50px;
