--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -25,8 +25,8 @@
 
   
         h4{
-         color:black;
-         font-size: large; 
+         color:darkgrey;
+         font-size: x-large; 
         
          font-weight: lighter;
          text-indent: 50px;
