--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -25,7 +25,7 @@
 
   
         h4{
-         color:darkgrey;
+         color:#212121;
          font-size: x-large; 
         
          font-weight: lighter;
