--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -78,7 +78,7 @@
      <h6 style="color:steelblue">Garage</h6>
 
      <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart5/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-     <h4>CD 1-6 Details</h4>
+     <h4>Manhattan CD 1-6 Details</h4>
      <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart6/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
 
