--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -82,4 +82,11 @@
      <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart6/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
 
+  
+     <h4>All CD Details (2006 vs. 2012 vs. 2022) </h4>
+     <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart7/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+
+
+  
+  
  </body>
