--- a/SeeBarChart5/index.html
+++ b/SeeBarChart5/index.html
@@ -68,25 +68,43 @@
  <body>
 
      <h3>DCA Parking Capacity by Facility Type (2012 vs. 2022)</h3>
-     
-  
-  
 
-    
+
+
+
+
      <h6 style="color:skyblue">Parking Lot</h6>
      <h6 style="color:darkorange">Combo </h6>
      <h6 style="color:steelblue">Garage</h6>
 
      <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart5/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
      <h4>Manhattan CD 1-6 Details</h4>
+
+
+     <h6 style="color:skyblue">Parking Lot</h6>
+     <h6 style="color:darkorange">Combo </h6>
+     <h6 style="color:steelblue">Garage</h6>
+
+
      <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart6/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
 
-  
-     <h4>All CD Details (2006 vs. 2012 vs. 2022) </h4>
+
+     <h4>All CD Details (2006 vs 2012 vs 2022) </h4>
+
+
+     <h6 style="color:skyblue">Parking Lot</h6>
+     <h6 style="color:darkorange">Combo </h6>
+     <h6 style="color:steelblue">Garage</h6>
      <iframe width=800 height=600 frameborder="0" src="https://kjohnso.github.io/BarChart7/" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
 
-  
-  
+
+
+
+
+
+
+
+
  </body>
