--- a/DMV_Electric/index.html
+++ b/DMV_Electric/index.html
@@ -50,7 +50,16 @@
             border-color: rgba(0, 0, 0, 0.5);
         }
 
-
+      #chart4 {
+            position: absolute;
+            left: 0%;
+            top: 300%;
+            height: 100%;
+            width: 100%;
+            border-style: solid;
+            border-width: 0.1rem;
+            border-color: rgba(0, 0, 0, 0.5);
+        }
 
 
 
@@ -76,7 +85,9 @@
         <iframe src="PercCovidChngVsPercElectricNew1.html" id="chart3"></iframe>
     </div>
 
-
+  <div>
+        <iframe src="PercCovidChngVsPercElectricNew2.html" id="chart4"></iframe>
+    </div>
 
    
 
