--- a/ProjectList/index.html
+++ b/ProjectList/index.html
@@ -43,7 +43,7 @@
              
               <p><a href="https://kjohnso.github.io/BarChart3//">Vehicle Ownership Rates (D3 Animated Bars)</a></p>
 
-              <p><a href="https://kjohnso.github.io/BarChart//">Vehicle Ownership Rates (D3 Animated Bars)</a></p>
+              <p><a href="https://kjohnso.github.io/DMV_Bar2//">Vehicle Ownership Rates (D3 Animated Bars)</a></p>
 
 
 
