--- a/ProjectList/index.html
+++ b/ProjectList/index.html
@@ -34,7 +34,7 @@
               <div class="section level2">
               <h3>Projects  </h3>
 
-              <p><a href="https://nycplanning.github.io/td-mtatracker">MTA Bus and Subway Tracker (Plotly Multiline Chart)</a></p>
+              <p><a href="https://nycplanning.github.io/td-mtatracker">Subway Ridership and Covid (D3 Multiline Chart)</a></p>
               <p><a href="https://kjohnso.github.io/DCA_Aug2022//">NYC Public Parking Map (Plotly Map)</a></p>
               <p><a href="https://kjohnso.github.io/VehAvailTenureScatter//">Housing Tenure and Vehicles Available (Plotly Scatterplot)</a></p>
               <p><a href="https://kjohnso.github.io/TD_Data//">Data for Transportation Analytics (D3 Force-Directed Graph )</a></p>
