--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -13,20 +13,11 @@ body {font-family: helvecia, sans-serif;
 
 margin-left: 100px;
 margin-right: 100px;
-margin-bottom: 100px;
+margin-bottom: 50px;
+margin-top: 50px;
 }
 
 
-
-
-h1 {
-text-align: center;
-font-size: 3.5em;
-font-weight: normal;
- color: #999999;
-
-
-}
 
 h3 {
 text-align: center;
@@ -34,6 +25,7 @@ font-size: 2.5em;
 font-weight: normal;
  color: #999999;
 
+ margin-top: 0px;
 
 }
 
@@ -43,6 +35,8 @@ font-size: .9em;
 font-weight: normal;
  color:  cornflowerblue;
 margin-left: 10px;
+margin-top: 0px;
+margin-bottom: 20px;
 
 }
 
@@ -112,7 +106,7 @@ max-width: 100%;
 
 <body>
 
-<h3>Projects</h3>
+<h3>KBJ Projects</h3>
 
 <div class="outer-grid">
 
@@ -122,54 +116,20 @@ max-width: 100%;
  <div class="inner-grid">
 
 
-
-     <a href="https://kjohnso.github.io/Ptng"><img src="FortTildenFall.jpg"></a> 
- 
-
-   
-  <a href="https://kjohnso.github.io/Ptng"><h6>Fort Tilden Summer 2022</h6></a>
+  <a href="https://kjohnso.github.io/Hobbies"><img 
+        src="KarenInGarden.JPG"></a>  
+     
 
 
-<a href="https://kjohnso.github.io/Ptng"><img src="Beach.jpg"></a> 
-
-
-
-  <a href="https://kjohnso.github.io/Ptng"><h6>Oil Painting 2021</h6></a>
-
- <a href="https://kjohnso.github.io/Hobbies"><img src="Hobbies2.jpg"></a> 
-
-  <p><a href="https://kjohnso.github.io/Hobbies"><h6>Hobbies Diagram</h6></a>
-
-
-
-
-
-
-
-
-
-
-  </div>
-
-
-  <div class="inner-grid">
-
-  
-
-
-     <a href="https://www.pexels.com/photo/ambulance-architecture-building-business-263402/"><img src="KarenMask.jpg"></a> 
-
-
-
-
-
+       <p><a href="https://kjohnso.github.io/Hobbies"><h6>Hobbies Diagram</h6></a>
   <p><a href="https://kjohnso.github.io/Meaning"><h6>Meaning Diagram</h6></a>
 
 
-  <a href="/Users/karen/Documents/A_Force_Meaning2/index.html"><img 
-        src="KarenInGarden.JPG"></a>  
+ <a href="https://kjohnso.github.io/Ptng"><img src="Tilden2.jpg"></a> 
+  <a href="https://kjohnso.github.io/Ptng"><h6>Oil Painting 2021</h6></a>
 
-  <p><a href="Projects.html"><h6>Diagram of Karen's Projects</h6></a>
+
+
 
 
 
@@ -177,20 +137,73 @@ max-width: 100%;
   </div>
 
 
-
-
-  
   <div class="inner-grid">
+
+
+
+ <a href="Tilden2022.html"><img src="7TildenTrunk.jpg"></a> 
+
+  <a href="Tilden2022.html"><h6>Tilden 2022</h6></a>
+ 
+
 
       <a href="https://kjohnso.github.io/Parks//"><img 
         src="Parks5.jpg" ></a>  
   <p><a href="https://kjohnso.github.io/Parks"><h6>Parks Map</h6></a>
 
-     <a href="https://drive.google.com/drive/folders/12uXu8GV0RqS-jYAB8WBAA5vri3yzdjoA"><img src="MikeWithKensGuit.JPG"></a> 
 
 
 
-  <a href="https://drive.google.com/drive/folders/12uXu8GV0RqS-jYAB8WBAA5vri3yzdjoA"><h6>Photos of Mike's Projects</h6></a>
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+  </div>
+
+
+
+
+  
+  <div class="inner-grid">
+
+
+     <a href="MikesProjects.html"><img src="MikeWithKensGuit.JPG"></a> 
+
+
+  <a href="MikesProjects.html"><h6>Photos of Mike's Projects</h6></a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
